# smart-home-bot-service

./: Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  config.py  messages.py  settings.py
app/callbacks/: text_message.py  voice_message.py
app/services/: grace.py
