[tool.poetry]
name = "smart-home-bot-service"
version = "0.1.0"
description = ""
authors = ["Adilson Pavan <adilson.pavan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
python-telegram-bot = "21.0.1"
speechrecognition = "3.10.1"
pydub = "0.25.1"
google-speech = "1.2.0"
requests = "2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
bandit = "^1.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
